--- a/src/components/EntertainmentCard/carousel.css
+++ b/src/components/EntertainmentCard/carousel.css
@@ -1,37 +1,39 @@
 /* REACT SLICK ARROW CUSTOM CSS */
-.react__slick__slider__parent {
+.slick_entertainment_parent {
   position: relative;
 }
 
-.react__slick__slider__parent .slick-prev,
-.react__slick__slider__parent .slick-next {
+.slick_entertainment_parent .slick-prev,
+.slick_entertainment_parent .slick-next {
   position: absolute;
   top: 50%;
 }
-.react__slick__slider__parent .slick-prev {
+.slick_entertainment_parent .slick-prev {
   color: white;
-  background-color: black;
   z-index: 1;
   height: 50px;
   width: 70px;
   border-radius: 8%;
-  padding-left: 20px;
+  padding-top: 20px;
+  padding-left: 70px;
+  text-shadow: 0 0 5px black;
 }
-.react__slick__slider__parent .slick-next {
+.slick_entertainment_parent .slick-next {
   color: white;
-  background-color: black;
   z-index: 1;
   height: 50px;
   width: 80px;
   border-radius: 8%;
-  padding-right: 30px;
+  padding-top: 20px;
+  padding-right: 90px;
+  text-shadow: 0 0 5px black;
 }
 
-.react__slick__slider__parent .slick-prev:before, .slick-next:before {
+.slick_entertainment_parent .slick-prev:before, .slick-next:before {
   color:white;
 }
 
 
-.react__slick__slider__parent {
+.slick_entertainment_parent {
 position: relative;
 }
